# usql

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README.md  bootstrap  config.h.in  configure  configure.ac  configure.in  configure_macports  cpplint
doc/: sql_statement.vsd  usql_examples.md  usql_examples.vsd  usql_overview.md  usql_statement.vsd
doc/img/: usql_examples_uml.vsd
examples/: Makefile.am  Makefile.in
examples/common/: Dictionary.cpp  Dictionary.h  MD5.cpp  MD5.h  SQLProxy.cpp  SQLProxy.h  SQLProxyDataSet.cpp  SQLProxyDataSet.h  SQLProxyResult.cpp  SQLProxyResult.h  SQLResult.cpp  SQLResult.h
examples/common/unittest/: MD5Test.cpp  SQLProxyTest.cpp  SQLProxyText.cpp
examples/leveldb/: LevelDB.cpp  LevelDB.h  LevelDBProxy.cpp  LevelDBProxy.h  Makefile.in  README  leveldb.cpp  main.cpp
examples/leveldb/macosx/xcode/leveldb.xcodeproj/: project.pbxproj
examples/leveldb/unittest/: LevelDBSQLKeyTest.cpp  LevelDBSQLTest.cpp  LevelDBTest.cpp  LevelDBTest.h  LevelDBTestMain.cpp  LevelDBTestSQL.cpp  LevelDBTestSQLProxy.cpp  SqlEngineLevelDBTestMain.cpp
examples/leveldb/unix/: Makefile.am  Makefile.in
examples/sqlparse/: Makefile.in  sqlparse.cpp
examples/sqlparse/macosx/xcode/sqlparse/: main.cpp  sqlparse.1
examples/sqlparse/macosx/xcode/sqlparse.xcodeproj/: project.pbxproj
examples/sqlparse/macosx/xcode/sqlparse.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/sqlparse/samples/: sample01.sql
examples/sqlparse/unix/: Makefile.am  Makefile.in
examples/sqlproxy/: Makefile.in  MemcachedProxy.cpp  MemcachedProxy.h  MySQLProxy.cpp  MySQLProxy.h  main.cpp  sqlproxy.cpp
examples/sqlproxy/macosx/xcode/sqlproxy/: sqlproxy.1
examples/sqlproxy/macosx/xcode/sqlproxy.xcodeproj/: project.pbxproj
examples/sqlproxy/unittest/: SQLProxyTestMain.cpp
examples/sqlproxy/unix/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  SQLParser.h  SQLQuery.h
include/cybergarage/sql/: GQLParser.h  SQL92Parser.h  SQLError.h  SQLNode.h  SQLNodes.h  SQLParser.h  SQLQuery.h  SQLStatement.h  UnQLParser.h
include/cybergarage/sql/node/: SQLCollection.h  SQLCollections.h  SQLColumn.h  SQLColumns.h  SQLCommand.h  SQLCondition.h  SQLDataColumn.h  SQLDataSet.h  SQLDataSource.h  SQLDictionary.h  SQLExpression.h  SQLExpressions.h  SQLFrom.h  SQLFunction.h  SQLGroupBy.h  SQLHaving.h  SQLIndex.h  SQLLimit.h  SQLOffset.h  SQLOperator.h  SQLOption.h  SQLOrder.h  SQLOrderBy.h  SQLOrders.h  SQLRow.h  SQLRows.h  SQLSet.h  SQLSets.h  SQLTable.h  SQLTransaction.h  SQLValue.h  SQLValues.h  SQLWhere.h
include/usql/: GQLParser.h  SQL92Parser.h  SQLError.h  SQLNode.h  SQLNodes.h  SQLParser.h  SQLStatement.h  UnQLParser.h  platform.h
include/usql/node/: SQLCollection.h  SQLCollections.h  SQLColumns.h  SQLCommand.h  SQLCondition.h  SQLDataSet.h  SQLExpression.h  SQLFunction.h  SQLGroupBy.h  SQLIndex.h  SQLLimit.h  SQLOffset.h  SQLOperator.h  SQLOption.h  SQLOrder.h  SQLOrderBy.h  SQLSet.h  SQLSets.h  SQLTransaction.h  SQLValues.h
lib/: Makefile.in
lib/macosx/xcode/SqlEngineLib/: SqlEngineLib-Prefix.pch  SqlEngineLibTarget.xcconfig
lib/macosx/xcode/SqlEngineLib.xcodeproj/: project.pbxproj
lib/macosx/xcode/libusql++.xcodeproj/: project.pbxproj
lib/unix/: Makefile.am  Makefile.in
lib/win32/vs2008/: SqlEngineLib.sln  SqlEngineLib.vcproj
pkg/homebrew/: usql++.rb
script/: sql1992toc.awk  sql1992toc.txt
src/: SQLParser.cpp
src/cybergarage/sql/: GQLParser.cpp  SQL92Parser.cpp  SQLError.cpp  SQLNode.cpp  SQLNodeList.cpp  SQLParser.cpp  SQLQuery.cpp  SQLStatement.cpp  SQLStatementList.cpp  UnQLParser.cpp
src/cybergarage/sql/node/: SQLColumn.cpp  SQLColumns.cpp  SQLCommand.cpp  SQLCondition.cpp  SQLDictionary.cpp  SQLExpression.cpp  SQLExpressions.cpp  SQLOperator.cpp  SQLOrder.cpp  SQLSet.cpp  SQLValue.cpp  SQLValues.cpp
src/cybergarage/sql/parser/antlr/: GQL.g  GQLLexer.cpp  GQLLexer.h  GQLParser.cpp  GQLParser.h  Makefile  SQL.g  SQL92.g  SQL92.tmp.g  SQL92Lexer.cpp  SQL92Lexer.h  SQL92Parser.cpp  SQL92Parser.h  SQLLexer.cpp  SQLLexer.h  SQLParser.cpp  SQLParser.h  UnQL.g  UnQLLexer.cpp  UnQLLexer.h  UnQLParser.cpp  UnQLParser.h
src/cybergarage/sql/parser/yacc/: Makefile  SQLParser.l  SQLParser.y
src/parser/yacc/: SQLParser.y
src/usql/: GQLParser.cpp  SQL92Parser.cpp  SQLError.cpp  SQLNode.cpp  SQLNodeList.cpp  SQLParser.cpp  SQLStatement.cpp  SQLStatementList.cpp  UnQLParser.cpp
src/usql/node/: SQLColumns.cpp  SQLCommand.cpp  SQLDictionary.cpp  SQLExpression.cpp  SQLOperator.cpp  SQLOrder.cpp  SQLSet.cpp  SQLValues.cpp
src/usql/parser/antlr/: Makefile  SQL.g  SQLLexer.cpp  SQLLexer.h  SQLLexerFunc.cpp  SQLParser.h  SQLParserFunc.cpp
src/usql/parser/antlr4/: Makefile  SQL.g4  SQL92.g4  SQL92BaseListener.cpp  SQL92BaseListener.h  SQL92Lexer.cpp  SQL92Lexer.h  SQL92Listener.cpp  SQL92Listener.h  SQL92Parser.cpp  SQL92Parser.h  SQLListener.cpp  SQLListener.h  SQLParser.cpp  SQLParser.h
tests/: Makefile.in  SqlEngineTestCaseReader.h  SqlEngineTestExpression.cpp  SqlEngineTestParser.h  SqlEngineTestSQL92Parser.cpp  SqlEngineTestStatements.h
tests/macosx/xcode/SqlEngineTestUnit.xcodeproj/: project.pbxproj
tests/unix/: Makefile.am  Makefile.in
tests/win32/vs2008/: SqlEngineTestUnit.sln  SqlEngineTestUnit.vcproj
unittest/: Makefile.in  SqlEngineTestBase.cpp  SqlEngineTestCase.cpp  SqlEngineTestCase.h  SqlEngineTestCaseReader.cpp  SqlEngineTestCaseReader.h  SqlEngineTestExampleLevelDB.cpp  SqlEngineTestExpression.cpp  SqlEngineTestGQLParser.cpp  SqlEngineTestLeveldbParser.cpp  SqlEngineTestParser.cpp  SqlEngineTestParser.h  SqlEngineTestQuery.cpp  SqlEngineTestSQL92Parser.cpp  SqlEngineTestStatements.h  SqlEngineTestUnQLParser.cpp  cppunitmain.cpp
unittest/ios/xcode/SqlEngineUnitTest/: SqlEngineUnitTest.1
unittest/ios/xcode/SqlEngineUnitTest.xcodeproj/: project.pbxproj
unittest/macosx/xcode/SqlEngineTestUnit.xcodeproj/: project.pbxproj
unittest/macosx/xcode/SqlEngineTestUnit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
unittest/unix/: Makefile.am  Makefile.in
(+3 files in other folders)
