############################################################################
#
# uSQL for C++
#
############################################################################

AC_INIT(include/usql/SQLParser.h)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(usql++, 0.8)
AM_CONFIG_HEADER(config.h)

##############################
# Constants
##############################

# ANTLR3C version.
LIBANTLR3C=3.4

##############################
# Checks for programs.
##############################

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_LANG_CPLUSPLUS

##############################
# Checks for header files.
##############################

AC_HEADER_STDC

##############################
# Checks for libtool.
##############################

AC_ARG_WITH(libtool,
	AS_HELP_STRING([--with-libtool],
		       [use libtool to build the library (default = yes)]),
		       [],
		       [with_libtool=yes])
AM_CONDITIONAL(HAVE_LIBTOOL, test $with_libtool = yes)

##############################
# Checks for ANTLR3C
##############################

AC_CHECK_LIB([antlr3c],[antlr3StringStreamNew],,[AC_MSG_ERROR(uSQL for C++ needs ANTLR3C >= $LIBANTLR3C)])

##############################
# Checks for other headers.
##############################

AC_CHECK_HEADERS([stdint.h])

##############################
# Checks for other functions.
##############################

# AC_CHECK_FUNCS([fopen])

##############################
# Makefiles
##############################

AC_OUTPUT([
Makefile
include/Makefile
lib/Makefile
lib/unix/Makefile
unittest/Makefile
unittest/unix/Makefile
examples/leveldb/Makefile
examples/leveldb/unix/Makefile
examples/sqlparse/Makefile
examples/sqlparse/unix/Makefile
examples/sqlproxy/Makefile
examples/sqlproxy/unix/Makefile
])
