##################################################################
#
# uSQL for C++
#
# Copyright (C) Satoshi Konno 2012
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

usqlcc_headers = \
	./usql/GQLParser.h \
	./usql/node/SQLCollection.h \
	./usql/node/SQLCollections.h \
	./usql/node/SQLColumns.h \
	./usql/node/SQLCommand.h \
	./usql/node/SQLCondition.h \
	./usql/node/SQLDataSet.h \
	./usql/node/SQLExpression.h \
	./usql/node/SQLFunction.h \
	./usql/node/SQLGroupBy.h \
	./usql/node/SQLIndex.h \
	./usql/node/SQLLimit.h \
	./usql/node/SQLOffset.h \
	./usql/node/SQLOperator.h \
	./usql/node/SQLOption.h \
	./usql/node/SQLOrder.h \
	./usql/node/SQLOrderBy.h \
	./usql/node/SQLSet.h \
	./usql/node/SQLSets.h \
	./usql/node/SQLTransaction.h \
	./usql/node/SQLValues.h \
	./usql/platform.h \
	./usql/SQL92Parser.h \
	./usql/SQLError.h \
	./usql/SQLNode.h \
	./usql/SQLNodes.h \
	./usql/SQLParser.h \
	./usql/SQLStatement.h \
	./usql/UnQLParser.h

nobase_include_HEADERS = \
	$(usqlcc_headers)
